# MiniORM

./: .gitignore  CMakeLists.txt  Readme.md  example  example.cpp  interview.md  miniorm_mysql.conf  miniorm_mysql.conf.example  test_adapter  test_concepts  test_config  test_entity  test_integration  test_query  test_traits  test_utils
include/miniorm/: miniorm.hpp
include/miniorm/adapter/: adapter.hpp
include/miniorm/connection/: connection_pool.hpp  database_connection.hpp  transaction.hpp
include/miniorm/core/: concepts.hpp  config.hpp  traits.hpp  utils.hpp
include/miniorm/entity/: entity_macros.hpp  entity_manager.hpp  entity_traits.hpp  reflection.hpp
include/miniorm/query/: condition.hpp  query_builder.hpp
src/adapter/: adapter.cpp
src/connection/: connection_manager.cpp  connection_pool.cpp  database_connection.cpp  transaction.cpp
src/core/: utils.cpp
src/entity/: entity_manager.cpp  reflection.cpp
src/query/: query_builder.cpp
test/: test_adapter.cpp  test_concepts.cpp  test_config.cpp  test_entity.cpp  test_integration.cpp  test_query.cpp  test_support.hpp  test_traits.cpp  test_utils.cpp
